# MultiClipRelay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
node/: Cargo.toml
node/src/: clipboard.rs  consts.rs  hash.rs  history.rs  image_mode.rs  lib.rs  main.rs  net.rs  paths.rs  suppress.rs  transfer_file.rs  transfer_image.rs  x11_native.rs  x11_sync.rs
node/src/cmd/: wl_apply.rs  wl_watch.rs
node/src/transfer/: file.rs  image.rs
node/src/x11/: native.rs
node/src/x11/sync/: mod.rs  service.rs  state.rs  wl_to_x11.rs  x11_watch.rs
packaging/: README.md
packaging/arch/: PKGBUILD  PKGBUILD.bin.in  PKGBUILD.git
packaging/common/: cliprelay-ui-gtk.desktop  cliprelay-ui-tray.desktop  multicliprelay-ui-gtk.desktop  multicliprelay-ui-tray.desktop  ui.toml.example
packaging/common/systemd/: cliprelay-relay.service  cliprelay-wl-apply.service  cliprelay-wl-watch.service  cliprelay.env.example  multicliprelay-relay.service  multicliprelay-wl-apply.service  multicliprelay-wl-watch.service  multicliprelay-x11-sync.service  multicliprelay.env.example
packaging/deb/: build_deb.sh
relay/: Cargo.toml
relay/src/: main.rs
scripts/: install.sh
ui-gtk/: Cargo.toml
ui-gtk/src/: config.rs  i18n.rs  main.rs  procs.rs  systemd.rs  ui.rs  util.rs
ui-gtk/src/ui/: apply_lang.rs  config_wiring.rs  connection.rs  constants.rs  diagnostics.rs  helpers.rs  history.rs  services.rs  table.rs  timers.rs  (+1 more)
ui-tray/: Cargo.toml
ui-tray/src/: config.rs  i18n.rs  main.rs  procs.rs  systemd.rs  tray_app.rs
utils/: Cargo.toml
utils/src/: lib.rs
