[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
utils = { path = "../utils" }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
